# so3

./: .clang-format  .gitignore  .gitmodules
usr/lib/: CMakeLists.txt  lv_conf.h
usr/lib/libc/: CMakeLists.txt  libc.c  longjmp.S  setjmp.S
usr/lib/libc/stdio/: CMakeLists.txt
usr/lib/libc/time/: CMakeLists.txt
usr/lib/slv/: CMakeLists.txt  slv.c  slv_fb.c  slv_fb.h  slv_fs.h  slv_keyboard.c  slv_keyboard.h  slv_mouse.c
usr/src/: CMakeLists.txt  fillfb.c  init.c  lvgl_benchmark.c  lvgl_demo.c  lvgl_perf.c  more.c  netperf_client.c  netperf_server.c  ping.c  sh.c
usr/src/micropython/extmod/: font_petme128_8x8.h  machine_bitstream.c  machine_bitstream.h  machine_i2c.c  machine_i2c.h  machine_mem.c  machine_mem.h  machine_pinbase.c  machine_pulse.c  machine_pulse.h  machine_pwm.c  machine_pwm.h  machine_signal.c  machine_spi.c  machine_spi.h  machine_timer.c  misc.h  modasyncio.c  modbinascii.c  modbluetooth.c  modbluetooth.h  modbtree.c  modcryptolib.c  modframebuf.c  modhashlib.c  modheapq.c  modjson.c  modlwip.c  modnetwork.c  modnetwork.h  modonewire.c  modos.c  modplatform.c  modplatform.h  modrandom.c  modre.c  modselect.c  modsocket.c  modssl_axtls.c  modssl_mbedtls.c  (+28 more)
usr/src/micropython/mpy-cross/: gccollect.c  main.c  mpconfigport.h
usr/src/micropython/py/: argcheck.c  asmarm.c  asmarm.h  asmbase.c  asmbase.h  asmthumb.c  asmthumb.h  asmx64.c  asmx64.h  asmx86.c  asmx86.h  asmxtensa.c  asmxtensa.h  bc.c  bc.h  bc0.h  (+152 more)
usr/src/slv/: slv.c  slv.h  slv_fb.c  slv_fs.c  slv_keyboard.c  slv_mouse.c  slv_mouse.h
usr/src/widgets/: CMakeLists.txt  demofb.c
(+695 files in other folders)
